# trun

./: .cirrus.yml  Cargo.toml  all_tests.toml  test.toml  test_apt.toml  test_block.toml  test_line.toml  test_systemd.toml
.ci/: Dockerfile
.circleci/: config.yml
shell_tests/: all_tests.toml  copied_all.toml  test.toml  test_apt.toml  test_block.toml  test_cmd.toml  test_copy_files.toml  test_line.toml  test_systemd.toml
shell_tests/test_recipe/: hello_world.rs  main.toml
shell_tests/test_recipe/recipes/: hello.toml  hello1.toml
src/: funcs.rs  lib.rs
src/funcs/: apt.rs  command.rs  copy.rs  file.rs  file_content.rs  looop.rs  opts.rs  prompt.rs  recipe.rs  runner.rs  systemd.rs
