[package]
name = "trun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[[bin]]
name = "trun"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

