[package]
name = "trun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[[bin]]
name = "trun"

[dependencies]
indexmap = { version = "1.8.1", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
typetag = "0.1.8"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

