[package]
name = "trun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "trun"
path = "src/lib.rs"

[[bin]]
name = "trun"
path = "src/bin/trun.rs"
[dependencies]
enum_dispatch = "0.3.8"
indexmap = { version = "1.8.1", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
toml_edit = { version = "0.14.4", features = ["easy"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true


[features]
apt = []
